latte/front/parser/LatteParser.py
# Generated from latte/front/parser/Latte.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LatteParser ( Parser ):

    grammarFileName = "Latte.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "';'", "'='", "'('", "','", "')'", 
                     "'{'", "'}'", "':'", "'-'", "'!'", "'*'", "'/'", "'+'", 
                     "'%'", "'@'", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'&&'", "'||'", "'['", "']'", "<INVALID>", 
                     "<INVALID>", "'import'", "'procedure'", "'export'", 
                     "'array'", "'int'", "'real'", "'if'", "'else'", "'loop'", 
                     "'break'", "'continue'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WHITESPACE", 
                      "COMMENT", "IMPORT", "PROCEDURE", "EXPORT", "ARRAY", 
                      "INT", "REAL", "IF", "ELSE", "LOOP", "BREAK", "CONTINUE", 
                      "RETURN", "INT_CONST", "REAL_CONST", "IDENTIFIER", 
                      "CHAR_CONST", "STRING_CONST" ]

    RULE_compilationUnit = 0
    RULE_importDeclaration = 1
    RULE_topDeclaration = 2
    RULE_varDeclaration = 3
    RULE_procedureDeclaration = 4
    RULE_procedureArgument = 5
    RULE_statement = 6
    RULE_blockStatement = 7
    RULE_ifStatement = 8
    RULE_loopStatement = 9
    RULE_breakStatement = 10
    RULE_continueStatement = 11
    RULE_returnStatement = 12
    RULE_expressionStatement = 13
    RULE_assignStatement = 14
    RULE_varStatement = 15
    RULE_varInitialization = 16
    RULE_expression = 17
    RULE_accessExpression = 18
    RULE_latteType = 19
    RULE_nativeType = 20
    RULE_arrayShape = 21

    ruleNames =  [ "compilationUnit", "importDeclaration", "topDeclaration", 
                   "varDeclaration", "procedureDeclaration", "procedureArgument", 
                   "statement", "blockStatement", "ifStatement", "loopStatement", 
                   "breakStatement", "continueStatement", "returnStatement", 
                   "expressionStatement", "assignStatement", "varStatement", 
                   "varInitialization", "expression", "accessExpression", 
                   "latteType", "nativeType", "arrayShape" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    WHITESPACE=27
    COMMENT=28
    IMPORT=29
    PROCEDURE=30
    EXPORT=31
    ARRAY=32
    INT=33
    REAL=34
    IF=35
    ELSE=36
    LOOP=37
    BREAK=38
    CONTINUE=39
    RETURN=40
    INT_CONST=41
    REAL_CONST=42
    IDENTIFIER=43
    CHAR_CONST=44
    STRING_CONST=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LatteParser.EOF, 0)

        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(LatteParser.ImportDeclarationContext,i)


        def topDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.TopDeclarationContext)
            else:
                return self.getTypedRuleContext(LatteParser.TopDeclarationContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_compilationUnit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = LatteParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.IMPORT:
                self.state = 44
                self.importDeclaration()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.PROCEDURE) | (1 << LatteParser.EXPORT) | (1 << LatteParser.INT) | (1 << LatteParser.REAL))) != 0):
                self.state = 50
                self.topDeclaration()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(LatteParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(LatteParser.IMPORT, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(LatteParser.IDENTIFIER)
            else:
                return self.getToken(LatteParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return LatteParser.RULE_importDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDeclaration" ):
                return visitor.visitImportDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def importDeclaration(self):

        localctx = LatteParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(LatteParser.IMPORT)
            self.state = 59
            self.match(LatteParser.IDENTIFIER)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LatteParser.T__0:
                self.state = 60
                self.match(LatteParser.T__0)
                self.state = 61
                self.match(LatteParser.IDENTIFIER)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(LatteParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(LatteParser.VarDeclarationContext,0)


        def procedureDeclaration(self):
            return self.getTypedRuleContext(LatteParser.ProcedureDeclarationContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_topDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopDeclaration" ):
                return visitor.visitTopDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def topDeclaration(self):

        localctx = LatteParser.TopDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_topDeclaration)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.varDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.procedureDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def latteType(self):
            return self.getTypedRuleContext(LatteParser.LatteTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(LatteParser.IDENTIFIER, 0)

        def EXPORT(self):
            return self.getToken(LatteParser.EXPORT, 0)

        def expression(self):
            return self.getTypedRuleContext(LatteParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_varDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = LatteParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LatteParser.EXPORT:
                self.state = 73
                self.match(LatteParser.EXPORT)


            self.state = 76
            self.latteType()
            self.state = 77
            self.match(LatteParser.IDENTIFIER)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LatteParser.T__2:
                self.state = 78
                self.match(LatteParser.T__2)
                self.state = 79
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(LatteParser.PROCEDURE, 0)

        def latteType(self):
            return self.getTypedRuleContext(LatteParser.LatteTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(LatteParser.IDENTIFIER, 0)

        def EXPORT(self):
            return self.getToken(LatteParser.EXPORT, 0)

        def procedureArgument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.ProcedureArgumentContext)
            else:
                return self.getTypedRuleContext(LatteParser.ProcedureArgumentContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StatementContext)
            else:
                return self.getTypedRuleContext(LatteParser.StatementContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_procedureDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDeclaration" ):
                return visitor.visitProcedureDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def procedureDeclaration(self):

        localctx = LatteParser.ProcedureDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_procedureDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LatteParser.EXPORT:
                self.state = 82
                self.match(LatteParser.EXPORT)


            self.state = 85
            self.match(LatteParser.PROCEDURE)
            self.state = 86
            self.latteType()
            self.state = 87
            self.match(LatteParser.IDENTIFIER)
            self.state = 88
            self.match(LatteParser.T__3)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LatteParser.INT or _la==LatteParser.REAL:
                self.state = 89
                self.procedureArgument()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LatteParser.T__4:
                    self.state = 90
                    self.match(LatteParser.T__4)
                    self.state = 91
                    self.procedureArgument()
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 99
            self.match(LatteParser.T__5)
            self.state = 100
            self.match(LatteParser.T__6)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__3) | (1 << LatteParser.T__6) | (1 << LatteParser.T__9) | (1 << LatteParser.T__10) | (1 << LatteParser.INT) | (1 << LatteParser.REAL) | (1 << LatteParser.IF) | (1 << LatteParser.LOOP) | (1 << LatteParser.BREAK) | (1 << LatteParser.CONTINUE) | (1 << LatteParser.RETURN) | (1 << LatteParser.INT_CONST) | (1 << LatteParser.REAL_CONST) | (1 << LatteParser.IDENTIFIER) | (1 << LatteParser.CHAR_CONST) | (1 << LatteParser.STRING_CONST))) != 0):
                self.state = 101
                self.statement()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(LatteParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def latteType(self):
            return self.getTypedRuleContext(LatteParser.LatteTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(LatteParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LatteParser.RULE_procedureArgument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureArgument" ):
                return visitor.visitProcedureArgument(self)
            else:
                return visitor.visitChildren(self)




    def procedureArgument(self):

        localctx = LatteParser.ProcedureArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_procedureArgument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.latteType()
            self.state = 110
            self.match(LatteParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStatement(self):
            return self.getTypedRuleContext(LatteParser.BlockStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(LatteParser.IfStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(LatteParser.LoopStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(LatteParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(LatteParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(LatteParser.ReturnStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(LatteParser.ExpressionStatementContext,0)


        def assignStatement(self):
            return self.getTypedRuleContext(LatteParser.AssignStatementContext,0)


        def varStatement(self):
            return self.getTypedRuleContext(LatteParser.VarStatementContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LatteParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.blockStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.loopStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.breakStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                self.continueStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 117
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 118
                self.expressionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 119
                self.assignStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 120
                self.returnStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 121
                self.varStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StatementContext)
            else:
                return self.getTypedRuleContext(LatteParser.StatementContext,i)


        def getRuleIndex(self):
            return LatteParser.RULE_blockStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)




    def blockStatement(self):

        localctx = LatteParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_blockStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(LatteParser.T__6)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LatteParser.T__3) | (1 << LatteParser.T__6) | (1 << LatteParser.T__9) | (1 << LatteParser.T__10) | (1 << LatteParser.INT) | (1 << LatteParser.REAL) | (1 << LatteParser.IF) | (1 << LatteParser.LOOP) | (1 << LatteParser.BREAK) | (1 << LatteParser.CONTINUE) | (1 << LatteParser.RETURN) | (1 << LatteParser.INT_CONST) | (1 << LatteParser.REAL_CONST) | (1 << LatteParser.IDENTIFIER) | (1 << LatteParser.CHAR_CONST) | (1 << LatteParser.STRING_CONST))) != 0):
                self.state = 125
                self.statement()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(LatteParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LatteParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(LatteParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LatteParser.StatementContext)
            else:
                return self.getTypedRuleContext(LatteParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(LatteParser.ELSE, 0)

        def getRuleIndex(self):
            return LatteParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = LatteParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(LatteParser.IF)
            self.state = 134
            self.match(LatteParser.T__3)
            self.state = 135
            self.expression(0)
            self.state = 136
            self.match(LatteParser.T__5)
            self.state = 137
            self.statement()
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 138
                self.match(LatteParser.ELSE)
                self.state = 139
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP(self):
            return self.getToken(LatteParser.LOOP, 0)

        def statement(self):
            return self.getTypedRuleContext(LatteParser.StatementContext,0)


        def IDENTIFIER(self):
            return self.getToken(LatteParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LatteParser.RULE_loopStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatement" ):
                return visitor.visitLoopStatement(self)
            else:
                return visitor.visitChildren(self)




    def loopStatement(self):

        localctx = LatteParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loopStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LatteParser.IDENTIFIER:
                self.state = 142
                self.match(LatteParser.IDENTIFIER)
                self.state = 143
                self.match(LatteParser.T__8)


            self.state = 146
            self.match(LatteParser.LOOP)
            self.state = 147
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(LatteParser.BREAK, 0)

        def IDENTIFIER(self):
            return self.getToken(LatteParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LatteParser.RULE_breakStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)




    def breakStatement(self):

        localctx = LatteParser.BreakStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_breakStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(LatteParser.BREAK)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LatteParser.IDENTIFIER:
                self.state = 150
                self.match(LatteParser.IDENTIFIER)


            self.state = 153
            self.match(LatteParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinueStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(LatteParser.CONTINUE, 0)

        def IDENTIFIER(self):
            return self.getToken(LatteParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LatteParser.RULE_continueStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStatement" ):
                return visitor.visitContinueStatement(self)
            else:
                return visitor.visitChildren(self)




    def continueStatement(self):

        localctx = LatteParser.ContinueStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_continueStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(LatteParser.CONTINUE)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LatteParser.IDENTIFIER:
                self.state = 156
                self.match(LatteParser.IDENTIFIER)


            self.state = 159
            self.match(LatteParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(LatteParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(LatteParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_returnStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = LatteParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(LatteParser.RETURN)
            self.state = 162
            self.expression(0)
            self.state = 163
            self.match(LatteParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LatteParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_expressionStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStatement" ):
                return visitor.visitExpressionStatement(self)
            else:
                return visitor.visitChildren(self)




    def expressionStatement(self):

        localctx = LatteParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.expression(0)
            self.state = 166
            self.match(LatteParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessExpression(self):
            return self.getTypedRuleContext(LatteParser.AccessExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(LatteParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LatteParser.RULE_assignStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStatement" ):
                return visitor.visitAssignStatement(self)
            else:
                return visitor.visitChildren(self)



